force-app/main/default/objects/DecisionApplication2__c/DecisionApplication2__c.object-meta.xml
<CustomObject>
    <label>決裁申請2</label>
    <nameField>
        <displayFormat>DA-{0000}</displayFormat>
        <label>申請No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>