force-app/main/default/objects/DecisionApplication2__c/fields/AcquisitionOfApprovalDateTime__c.field-meta.xml
<CustomField>
    <fullName>AcquisitionOfApprovalDateTime__c</fullName>
    <label>決裁取得日時</label>
    <type>DateTime</type>
</CustomField>