force-app/main/default/objects/DecisionApplication2__c/fields/AdministrativeFeeCharges__c.field-meta.xml
<CustomField>
    <fullName>AdministrativeFeeCharges__c</fullName>
    <label>事務手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>