force-app/main/default/objects/DecisionApplication2__c/fields/AdministrativeFeeChargesTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>AdministrativeFeeChargesTaxCategory__c</fullName>
    <label>事務手数料_税区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>外税10％</fullName>
            </value>
            <value>
                <fullName>外税8％</fullName>
            </value>
            <value>
                <fullName>内税10％</fullName>
            </value>
            <value>
                <fullName>内税8％</fullName>
            </value>
            <value>
                <fullName>非課税</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>