force-app/main/default/objects/DecisionApplication2__c/fields/AdressNewContractContent__c.field-meta.xml
<CustomField>
    <fullName>AdressNewContractContent__c</fullName>
    <label>住所_新契約内容</label>
    <type>TextArea</type>
</CustomField>