force-app/main/default/objects/DecisionApplication2__c/fields/AgencyCompanyKana__c.field-meta.xml
<CustomField>
    <fullName>AgencyCompanyKana__c</fullName>
    <label>仲介会社カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>