force-app/main/default/objects/DecisionApplication2__c/fields/AmortisationDepreciation__c.field-meta.xml
<CustomField>
    <fullName>AmortisationDepreciation__c</fullName>
    <label>敷引/償却</label>
    <length>255</length>
    <type>Text</type>
</CustomField>