force-app/main/default/objects/DecisionApplication2__c/fields/ApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDate__c</fullName>
    <label>申請日</label>
    <type>Date</type>
</CustomField>