force-app/main/default/objects/DecisionApplication2__c/fields/ApprovalApplicationNote1__c.field-meta.xml
<CustomField>
    <fullName>ApprovalApplicationNote1__c</fullName>
    <label>決裁申請備考①</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>