force-app/main/default/objects/DecisionApplication2__c/fields/ApprovalDeadline__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDeadline__c</fullName>
    <label>承認期日</label>
    <type>Date</type>
</CustomField>