force-app/main/default/objects/DecisionApplication2__c/fields/AttachedDocumentIsContent__c.field-meta.xml
<CustomField>
    <fullName>AttachedDocumentIsContent__c</fullName>
    <label>添付書類の有無_内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>