force-app/main/default/objects/DecisionApplication2__c/fields/BillCreateDueDate__c.field-meta.xml
<CustomField>
    <fullName>BillCreateDueDate__c</fullName>
    <label>請求書作成期日</label>
    <type>Date</type>
</CustomField>