force-app/main/default/objects/DecisionApplication2__c/fields/BillingContentAndContactItems__c.field-meta.xml
<CustomField>
    <fullName>BillingContentAndContactItems__c</fullName>
    <label>請求内容及び連絡事項</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>