force-app/main/default/objects/DecisionApplication2__c/fields/BillingFields__c.field-meta.xml
<CustomField>
    <fullName>BillingFields__c</fullName>
    <label>請求項目</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>契約金</fullName>
            </value>
            <value>
                <fullName>名義変更</fullName>
            </value>
            <value>
                <fullName>売上（個別請求）</fullName>
            </value>
            <value>
                <fullName>売上（委託料請求時）</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>