force-app/main/default/objects/DecisionApplication2__c/fields/BillingFieldsMemo__c.field-meta.xml
<CustomField>
    <fullName>BillingFieldsMemo__c</fullName>
    <label>請求項目メモ</label>
    <type>TextArea</type>
</CustomField>