force-app/main/default/objects/DecisionApplication2__c/fields/BillingRentDailyRateCommonCharge__c.field-meta.xml
<CustomField>
    <fullName>BillingRentDailyRateCommonCharge__c</fullName>
    <label>請求家賃_月分日割共益費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>