force-app/main/default/objects/DecisionApplication2__c/fields/BillingRentDailyRateManagementCharge__c.field-meta.xml
<CustomField>
    <fullName>BillingRentDailyRateManagementCharge__c</fullName>
    <label>請求家賃_月分日割管理費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>