force-app/main/default/objects/DecisionApplication2__c/fields/BillingRentMonthMinutesDailyRateGarage__c.field-meta.xml
<CustomField>
    <fullName>BillingRentMonthMinutesDailyRateGarage__c</fullName>
    <label>請求家賃_月分日割駐車場</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>