force-app/main/default/objects/DecisionApplication2__c/fields/BillingRentOther3Fields__c.field-meta.xml
<CustomField>
    <fullName>BillingRentOther3Fields__c</fullName>
    <label>請求家賃_その他3_項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>