force-app/main/default/objects/DecisionApplication2__c/fields/BillingRentOther4Amount__c.field-meta.xml
<CustomField>
    <fullName>BillingRentOther4Amount__c</fullName>
    <label>請求家賃_その他4_金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>