force-app/main/default/objects/DecisionApplication2__c/fields/BillingRentOther4Fields__c.field-meta.xml
<CustomField>
    <fullName>BillingRentOther4Fields__c</fullName>
    <label>請求家賃_その他4_項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>