force-app/main/default/objects/DecisionApplication2__c/fields/BillingRentSubtotal__c.field-meta.xml
<CustomField>
    <fullName>BillingRentSubtotal__c</fullName>
    <formula>BillingRentMonthMinutesDailyRateRent__c +
 BillingRentDailyRateCommonCharge__c +
 BillingRentMonthMinutesDailyRateGarage__c +
 BillingRentDailyRateManagementCharge__c +
 BillingRentOther1Amount__c +
 BillingRentOther2Amount__c +
 BillingRentOther3Amount__c +
 BillingRentOther4Amount__c</formula>
    <label>請求家賃_小計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>