force-app/main/default/objects/DecisionApplication2__c/fields/BillingRewardKeyMoney__c.field-meta.xml
<CustomField>
    <fullName>BillingRewardKeyMoney__c</fullName>
    <label>請求_礼金/権利金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>