force-app/main/default/objects/DecisionApplication2__c/fields/BillingTotal__c.field-meta.xml
<CustomField>
    <fullName>BillingTotal__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>請求_合計</label>
    <type>Text</type>
</CustomField>