force-app/main/default/objects/DecisionApplication2__c/fields/ChangeMonth__c.field-meta.xml
<CustomField>
    <fullName>ChangeMonth__c</fullName>
    <label>変更月</label>
    <type>Date</type>
</CustomField>