force-app/main/default/objects/DecisionApplication2__c/fields/CleanArrangeManagementCharge__c.field-meta.xml
<CustomField>
    <fullName>CleanArrangeManagementCharge__c</fullName>
    <label>清掃・修繕業務手配管理費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>