force-app/main/default/objects/DecisionApplication2__c/fields/CleanRepairCost__c.field-meta.xml
<CustomField>
    <fullName>CleanRepairCost__c</fullName>
    <label>清掃・修繕費用</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>