force-app/main/default/objects/DecisionApplication2__c/fields/CleanRepairCostTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>CleanRepairCostTaxCategory__c</fullName>
    <label>清掃・修繕費用_税区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>外税10％</fullName>
            </value>
            <value>
                <fullName>外税8％</fullName>
            </value>
            <value>
                <fullName>内税10％</fullName>
            </value>
            <value>
                <fullName>内税8％</fullName>
            </value>
            <value>
                <fullName>非課税</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>