force-app/main/default/objects/DecisionApplication2__c/fields/CollectContactPaymentRequest__c.field-meta.xml
<CustomField>
    <fullName>CollectContactPaymentRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>回収連絡支払依頼</label>
    <referenceTo>CollectContactPaymentRequest__c</referenceTo>
    <relationshipLabel>決裁申請2</relationshipLabel>
    <relationshipName>DecisionApp_CollectContactPaymentRequest</relationshipName>
    <type>Lookup</type>
</CustomField>