force-app/main/default/objects/DecisionApplication2__c/fields/CommonChargeCurrentContractContent__c.field-meta.xml
<CustomField>
    <fullName>CommonChargeCurrentContractContent__c</fullName>
    <label>共益費_現契約内容</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>