force-app/main/default/objects/DecisionApplication2__c/fields/ContractMoneyRemittanceContractor__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyRemittanceContractor__c</fullName>
    <label>契約金送金_名義</label>
    <length>255</length>
    <type>Text</type>
</CustomField>