force-app/main/default/objects/DecisionApplication2__c/fields/ContractMoneyRemittanceContractorKana__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyRemittanceContractorKana__c</fullName>
    <label>契約金送金_名義カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>