force-app/main/default/objects/DecisionApplication2__c/fields/ContractMoneyRentEtcAdvancePaymentDetail__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyRentEtcAdvancePaymentDetail__c</fullName>
    <label>契約金・家賃等一時立替支払詳細</label>
    <length>255</length>
    <type>Text</type>
</CustomField>