force-app/main/default/objects/DecisionApplication2__c/fields/ContractTermBeginning__c.field-meta.xml
<CustomField>
    <fullName>ContractTermBeginning__c</fullName>
    <label>契約期間始期</label>
    <type>Date</type>
</CustomField>