force-app/main/default/objects/DecisionApplication2__c/fields/ContractTermEndDateCurrentContract__c.field-meta.xml
<CustomField>
    <fullName>ContractTermEndDateCurrentContract__c</fullName>
    <label>契約期間終期_現契約内容</label>
    <type>Date</type>
</CustomField>