force-app/main/default/objects/DecisionApplication2__c/fields/ContractTermEndDateNewContractContent__c.field-meta.xml
<CustomField>
    <fullName>ContractTermEndDateNewContractContent__c</fullName>
    <label>契約期間終期_新契約内容</label>
    <type>Date</type>
</CustomField>