force-app/main/default/objects/DecisionApplication2__c/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <label>契約種別</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>普通</fullName>
            </value>
            <value>
                <fullName>期限付</fullName>
            </value>
            <value>
                <fullName>定借</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>