force-app/main/default/objects/DecisionApplication2__c/fields/CorporateHousingCategory__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingCategory__c</fullName>
    <label>社宅区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>