force-app/main/default/objects/DecisionApplication2__c/fields/CurrentContractContent__c.field-meta.xml
<CustomField>
    <fullName>CurrentContractContent__c</fullName>
    <label>物件名_現契約内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>