force-app/main/default/objects/DecisionApplication2__c/fields/CustodyDepositPenalty2Amount__c.field-meta.xml
<CustomField>
    <fullName>CustodyDepositPenalty2Amount__c</fullName>
    <label>預り敷金_違約金2_金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>