force-app/main/default/objects/DecisionApplication2__c/fields/CustodyDepositPenalty2ExpenseItems__c.field-meta.xml
<CustomField>
    <fullName>CustodyDepositPenalty2ExpenseItems__c</fullName>
    <label>預り敷金_違約金2_費目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>