force-app/main/default/objects/DecisionApplication2__c/fields/CustodyDepositPenalty2TaxCategory__c.field-meta.xml
<CustomField>
    <fullName>CustodyDepositPenalty2TaxCategory__c</fullName>
    <label>預り敷金_違約金2_税区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>外税10％</fullName>
            </value>
            <value>
                <fullName>外税8％</fullName>
            </value>
            <value>
                <fullName>内税10％</fullName>
            </value>
            <value>
                <fullName>内税8％</fullName>
            </value>
            <value>
                <fullName>非課税</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>