force-app/main/default/objects/DecisionApplication2__c/fields/CustodyDepositSubtotal__c.field-meta.xml
<CustomField>
    <fullName>CustodyDepositSubtotal__c</fullName>
    <formula>CustodyDepositDeposit__c +
 CustodyDepositGarageDeposit__c +
 CustodyDepositAmortisationDepreciation__c +
 CustodyDepositPenalty1Amount__c +
 CustodyDepositPenalty2Amount__c</formula>
    <label>預り敷金_小計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>