force-app/main/default/objects/DecisionApplication2__c/fields/CustodyRentOther1Amount__c.field-meta.xml
<CustomField>
    <fullName>CustodyRentOther1Amount__c</fullName>
    <label>預り家賃_その他1_金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>