force-app/main/default/objects/DecisionApplication2__c/fields/CustodyRentOther1Fields__c.field-meta.xml
<CustomField>
    <fullName>CustodyRentOther1Fields__c</fullName>
    <label>預り家賃_その他1_項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>