force-app/main/default/objects/DecisionApplication2__c/fields/DailyRateDays__c.field-meta.xml
<CustomField>
    <fullName>DailyRateDays__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>日割日数</label>
    <type>Text</type>
</CustomField>