force-app/main/default/objects/DecisionApplication2__c/fields/DailyRateRentDifference__c.field-meta.xml
<CustomField>
    <fullName>DailyRateRentDifference__c</fullName>
    <label>日割家賃差額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>