force-app/main/default/objects/DecisionApplication2__c/fields/del_PaymentDoneAmount__c.field-meta.xml
<CustomField>
    <fullName>del_PaymentDoneAmount__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>（不要）入金済額</label>
    <type>Text</type>
</CustomField>