force-app/main/default/objects/DecisionApplication2__c/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <label>保証金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>