force-app/main/default/objects/DecisionApplication2__c/fields/DepositCurrentContractContent__c.field-meta.xml
<CustomField>
    <fullName>DepositCurrentContractContent__c</fullName>
    <label>敷金_現契約内容</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>