force-app/main/default/objects/DecisionApplication2__c/fields/DepositDifference__c.field-meta.xml
<CustomField>
    <fullName>DepositDifference__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>敷金_差額</label>
    <type>Text</type>
</CustomField>