force-app/main/default/objects/DecisionApplication2__c/fields/EarningsAppropriationMonth__c.field-meta.xml
<CustomField>
    <fullName>EarningsAppropriationMonth__c</fullName>
    <label>売上計上月</label>
    <type>Date</type>
</CustomField>