force-app/main/default/objects/DecisionApplication2__c/fields/GarageCertification__c.field-meta.xml
<CustomField>
    <fullName>GarageCertification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>車庫証明</label>
    <referenceTo>GarageCertification__c</referenceTo>
    <relationshipLabel>決裁申請2</relationshipLabel>
    <relationshipName>GarageCertification</relationshipName>
    <type>Lookup</type>
</CustomField>