force-app/main/default/objects/DecisionApplication2__c/fields/GarageCertificationFeeCharges__c.field-meta.xml
<CustomField>
    <fullName>GarageCertificationFeeCharges__c</fullName>
    <label>車庫証明発行手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>