force-app/main/default/objects/DecisionApplication2__c/fields/GarageCurrentContractContent__c.field-meta.xml
<CustomField>
    <fullName>GarageCurrentContractContent__c</fullName>
    <label>駐車場_現契約内容</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>