force-app/main/default/objects/DecisionApplication2__c/fields/IsReapplication__c.field-meta.xml
<CustomField>
    <fullName>IsReapplication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>再申請フラグ</label>
    <type>Checkbox</type>
</CustomField>