force-app/main/default/objects/DecisionApplication2__c/fields/LastMonthDecisionStatus__c.field-meta.xml
<CustomField>
    <fullName>LastMonthDecisionStatus__c</fullName>
    <label>前月決裁ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>前月決裁申請</fullName>
            </value>
            <value>
                <fullName>前月決裁申請対応済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>