force-app/main/default/objects/DecisionApplication2__c/fields/LastRentPayment__c.field-meta.xml
<CustomField>
    <fullName>LastRentPayment__c</fullName>
    <label>最終家賃支払</label>
    <type>Date</type>
</CustomField>