force-app/main/default/objects/DecisionApplication2__c/fields/LenderCurrentContractContent__c.field-meta.xml
<CustomField>
    <fullName>LenderCurrentContractContent__c</fullName>
    <label>貸主_現契約内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>