force-app/main/default/objects/DecisionApplication2__c/fields/LenderProxyCurrentContractContent__c.field-meta.xml
<CustomField>
    <fullName>LenderProxyCurrentContractContent__c</fullName>
    <label>貸主代理_現契約内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>