force-app/main/default/objects/DecisionApplication2__c/fields/ManagementChargeCurrentContractContent__c.field-meta.xml
<CustomField>
    <fullName>ManagementChargeCurrentContractContent__c</fullName>
    <label>管理費_現契約内容</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>