force-app/main/default/objects/DecisionApplication2__c/fields/ManagementChargeNewContractContent__c.field-meta.xml
<CustomField>
    <fullName>ManagementChargeNewContractContent__c</fullName>
    <label>管理費_新契約内容</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>