force-app/main/default/objects/DecisionApplication2__c/fields/ManagementCompanyAdress__c.field-meta.xml
<CustomField>
    <fullName>ManagementCompanyAdress__c</fullName>
    <label>管理会社_住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>