force-app/main/default/objects/DecisionApplication2__c/fields/ManagementCompanyCurrentContractContent__c.field-meta.xml
<CustomField>
    <fullName>ManagementCompanyCurrentContractContent__c</fullName>
    <label>管理会社_現契約内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>