force-app/main/default/objects/DecisionApplication2__c/fields/ManagementCompanyPhone__c.field-meta.xml
<CustomField>
    <fullName>ManagementCompanyPhone__c</fullName>
    <label>管理会社_TEL</label>
    <type>Phone</type>
</CustomField>