force-app/main/default/objects/DecisionApplication2__c/fields/NewContractContent__c.field-meta.xml
<CustomField>
    <fullName>NewContractContent__c</fullName>
    <label>物件名_新契約内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>