force-app/main/default/objects/DecisionApplication2__c/fields/NewMatter__c.field-meta.xml
<CustomField>
    <fullName>NewMatter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>新規</label>
    <referenceTo>NewMatter__c</referenceTo>
    <relationshipLabel>決裁申請</relationshipLabel>
    <relationshipName>DecisionApplicationNewMatter</relationshipName>
    <type>Lookup</type>
</CustomField>