force-app/main/default/objects/DecisionApplication2__c/fields/NewRegistration__c.field-meta.xml
<CustomField>
    <fullName>NewRegistration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>新規登録</label>
    <type>Checkbox</type>
</CustomField>