force-app/main/default/objects/DecisionApplication2__c/fields/NewRentBillingStartMonth__c.field-meta.xml
<CustomField>
    <fullName>NewRentBillingStartMonth__c</fullName>
    <label>新家賃でのご請求開始月</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>