force-app/main/default/objects/DecisionApplication2__c/fields/NextMonthCommonCharge__c.field-meta.xml
<CustomField>
    <fullName>NextMonthCommonCharge__c</fullName>
    <label>次月共益費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>