force-app/main/default/objects/DecisionApplication2__c/fields/NextMonthManagementCharge__c.field-meta.xml
<CustomField>
    <fullName>NextMonthManagementCharge__c</fullName>
    <label>次月管理費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>