force-app/main/default/objects/DecisionApplication2__c/fields/OtherBilling1FieldsName__c.field-meta.xml
<CustomField>
    <fullName>OtherBilling1FieldsName__c</fullName>
    <label>その他請求1_項目名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>