force-app/main/default/objects/DecisionApplication2__c/fields/OtherBilling2FieldsName__c.field-meta.xml
<CustomField>
    <fullName>OtherBilling2FieldsName__c</fullName>
    <label>その他請求2_項目名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>