force-app/main/default/objects/DecisionApplication2__c/fields/OtherBilling3FieldsName__c.field-meta.xml
<CustomField>
    <fullName>OtherBilling3FieldsName__c</fullName>
    <label>その他請求3_項目名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>