force-app/main/default/objects/DecisionApplication2__c/fields/OtherBilling4Amount__c.field-meta.xml
<CustomField>
    <fullName>OtherBilling4Amount__c</fullName>
    <label>その他請求4_金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>