force-app/main/default/objects/DecisionApplication2__c/fields/OtherContractMoney1TaxCategory__c.field-meta.xml
<CustomField>
    <fullName>OtherContractMoney1TaxCategory__c</fullName>
    <label>その他契約金1_税区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>