force-app/main/default/objects/DecisionApplication2__c/fields/OtherContractMoney2Amount__c.field-meta.xml
<CustomField>
    <fullName>OtherContractMoney2Amount__c</fullName>
    <label>その他契約金2_金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>