force-app/main/default/objects/DecisionApplication2__c/fields/OtherContractMoney2Fields__c.field-meta.xml
<CustomField>
    <fullName>OtherContractMoney2Fields__c</fullName>
    <label>その他契約金2_項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>