force-app/main/default/objects/DecisionApplication2__c/fields/OtherContractMoney2TaxCategory__c.field-meta.xml
<CustomField>
    <fullName>OtherContractMoney2TaxCategory__c</fullName>
    <label>その他契約金2_税区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>