force-app/main/default/objects/DecisionApplication2__c/fields/OtherContractMoney3Fields__c.field-meta.xml
<CustomField>
    <fullName>OtherContractMoney3Fields__c</fullName>
    <label>その他契約金3_項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>