force-app/main/default/objects/DecisionApplication2__c/fields/OtherContractMoney4Fields__c.field-meta.xml
<CustomField>
    <fullName>OtherContractMoney4Fields__c</fullName>
    <label>その他契約金4_項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>