force-app/main/default/objects/DecisionApplication2__c/fields/OtherWorkRequestDetail__c.field-meta.xml
<CustomField>
    <fullName>OtherWorkRequestDetail__c</fullName>
    <label>その他作業依頼詳細</label>
    <length>255</length>
    <type>Text</type>
</CustomField>