force-app/main/default/objects/DecisionApplication2__c/fields/ParkingFeeTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>ParkingFeeTaxCategory__c</fullName>
    <description>翌月以降駐車場代税区分が割り当てられる（車庫証明）</description>
    <label>駐車場代税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>