force-app/main/default/objects/DecisionApplication2__c/fields/PaymentAfterProcessContent__c.field-meta.xml
<CustomField>
    <fullName>PaymentAfterProcessContent__c</fullName>
    <label>入金後の処理内容</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>