force-app/main/default/objects/DecisionApplication2__c/fields/PaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>PaymentAmount__c</fullName>
    <label>支払金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>