force-app/main/default/objects/DecisionApplication2__c/fields/PaymentDestinationBankName__c.field-meta.xml
<CustomField>
    <fullName>PaymentDestinationBankName__c</fullName>
    <label>支払先_銀行名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>