force-app/main/default/objects/DecisionApplication2__c/fields/PaymentDestinationBranchOfficeName__c.field-meta.xml
<CustomField>
    <fullName>PaymentDestinationBranchOfficeName__c</fullName>
    <label>支払先_支店名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>