force-app/main/default/objects/DecisionApplication2__c/fields/PaymentDestinationPhone__c.field-meta.xml
<CustomField>
    <fullName>PaymentDestinationPhone__c</fullName>
    <label>支払先TEL</label>
    <type>Phone</type>
</CustomField>