force-app/main/default/objects/DecisionApplication2__c/fields/PaymentStartDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentStartDate__c</fullName>
    <label>支払開始日</label>
    <type>Date</type>
</CustomField>